# pfpf

./: .gitmodules  .settings.json  CMakeLists.txt
.cache/clangd/index/: App.hpp.D6CAFABCFC0C0546.idx  Color.hpp.69874A4A983ADDD5.idx  Concepts.hpp.A8AF77336C2D51EE.idx  FirstScene.hpp.900C7349F23C1784.idx  main.cpp.962B9E7529EF370D.idx  sokol_app.h.555A2031D2121858.idx  sokol_gfx.h.943287C0AF0D9B66.idx  sokol_glue.h.A7687A2897841331.idx
lib/thuwerato/: Color.hpp
lib/thux/: App.hpp  Concepts.hpp  init.hpp
src/: FirstScene.hpp  main.cpp
src/App/: App.hpp  emsc.h
src/Scene/: FirstScene.hpp  Scene.hpp
